src/scss/_nav.scss
.mobile-nav-open {
  &.disable-md-navbar-toggle {
    overflow-y: scroll;
    position: fixed;
    width: 100%;
  }
}

.navbar-toggler {
  border-color: $black;
  color: $black;

  &:hover,
  &:focus,
  &:active,
  &.active {
    background-color: $brand-primary;
    border-color: $brand-primary;
    color: $black;
  }

  .disable-md-navbar-toggle & {
    display: flex;

    @include media-breakpoint-up(lg) {
      display: none;
    }
  }
}

.navbar-toggler-icon {
  background-image: $navbar-light-toggler-bg;
}

.today-nav-desc {
  font-size: 80%;
}

.today-nav-wrapper {
  border-bottom: 1px solid $gray-lighter;
}

.today-site-nav {
  background-color: $gray-lighter;
  height: 0;
  opacity: 0;
  overflow: hidden;
  transition: opacity .3s cubic-bezier(.25, .5, .5, .9);

  @include media-breakpoint-down(md) {
    background-color: $white;
    height: 100%;
    left: -75%;
    opacity: 0;
    overflow-y: auto;
    position: fixed;
    top: 0;
    transition: left .3s cubic-bezier(.25, .5, .5, .9), opacity .3s cubic-bezier(.25, .5, .5, .9);
    width: 75%;
    z-index: 100000;
  }

  @include media-breakpoint-down(sm) {
    left: -85%;
    width: 85%;
  }

  &.slideout {
    @include media-breakpoint-down(md) {
      left: 0;
      opacity: 1;
    }
  }

  .disable-md-navbar-toggle &,
  &.slideout {
    height: auto;
    opacity: 1;

    @include media-breakpoint-down(md) {
      height: 100%;
    }
  }

  .container {
    @include media-breakpoint-down(md) {
      padding: 0;
    }
  }

  .close {
    @include media-breakpoint-down(md) {
      position: absolute;
      right: 0;
      top: 0;
    }
  }

  .navbar-nav {
    // Overrides the UCF WordPress Theme nav link styles.
    .nav-link {
      padding: 1rem 1.5rem;
      position: relative;

      @include media-breakpoint-up(lg) {
        height: 100%;
        padding: 1rem .6rem;
      }

      &.active,
      &:hover,
      &:focus,
      &:active {
        @include media-breakpoint-up(lg) {
          background-color: $gray-lighter;
        }
      }

      &:focus {
        @include media-breakpoint-up(lg) {
          text-decoration: underline;
        }
      }

      &:active {
        text-decoration: none;
      }

      &::after {
        @include media-breakpoint-up(lg) {
          border-bottom: 2px solid transparent;
          bottom: 0;
          content: '';
          left: 0;
          opacity: 0;
          position: absolute;
          transition: opacity .25s ease-in-out;
          width: 100%;
        }
      }

      &:hover::after {
        @include media-breakpoint-up(lg) {
          border-color: $gray-light;
          opacity: 1;
        }
      }

      &.active::after {
        @include media-breakpoint-up(lg) {
          border-color: $brand-primary;
          opacity: 1;
        }
      }
    }
  }
}

.site-nav-overlay {
  background-color: rgba($black, .5);
  content: '';
  opacity: 0;

  @include media-breakpoint-down(md) {
    &.in {
      height: 100%;
      left: 0;
      opacity: 1;
      position: absolute;
      top: 0;
      width: 100%;
      z-index: 99999;
    }
  }
}

.today-nav-actions {
  .weather {
    @include media-breakpoint-down(md) {
      display: none;
    }
  }
}

